fixed heart on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -530,7 +530,7 @@
 	}
 
 	.made {
-		margin-right: 20px;
+		margin-right: 15px;
 	}
 
 	.heart {
@@ -538,7 +538,7 @@
 	}
 
 	.stephan {
-		margin-left: 10px;
+		margin-left: 12px;
 	}
 }
 
